[tool.poetry]
name = "devcontainer"
version = "0.1.0"
description = "Generic development cli for various application types."
authors = ["Felix Trautwein <mail@felixtrautwein.de>"]

[tool.poetry.dependencies]
python="^3.10"
ruff = "^0.1.6"
devtools = {path = "tools/devtools"}

[tool.poetry.group.dev.dependencies]
pre-commit="^3.5.0"
pytest = "^7.4.3"
pytest-cases = "^3.8.1"
pytest-cov="^4.1.0"
pylint="^3.0.2" # TODO: Check if needed for Django linting or possible with VSCode extension
pylint-django="^2.5.5"
pylint-plugin-utils="^0.8.2"
pip-licenses="^4.3.3"

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
format.skip-magic-trailing-comma = true
lint.isort.combine-as-imports = true
